[gd_scene load_steps=7 format=3 uid="uid://6cxguwupp0vj"]

[ext_resource type="FontFile" uid="uid://tml0a6xpx753" path="res://Scenes/menu/aqua.ttf" id="1_5nykb"]
[ext_resource type="Script" path="res://Scenes/menu/MainMenu.gd" id="1_h3t8l"]
[ext_resource type="PackedScene" uid="uid://bb2611wtuse72" path="res://Scenes/game/game_world.tscn" id="2_vsyyp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x6o1d"]
bg_color = Color(0, 0, 0, 0.392157)
border_width_top = 10
border_width_bottom = 10
border_color = Color(0, 0.00392157, 0, 0.392157)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tq78x"]
bg_color = Color(0, 0, 0, 0.490196)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ng1xh"]
bg_color = Color(0, 0.0156863, 0.00784314, 0.686275)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_h3t8l")
mainGameScene = ExtResource("2_vsyyp")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.105882, 0.0784314, 0.721569, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 75
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_5nykb")
theme_override_font_sizes/font_size = 125
text = "Fishy Sim"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 50

[node name="NewGameButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("1_5nykb")
theme_override_font_sizes/font_size = 75
theme_override_styles/normal = SubResource("StyleBoxFlat_x6o1d")
theme_override_styles/hover = SubResource("StyleBoxFlat_tq78x")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ng1xh")
text = "New Game"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="OptionsButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("1_5nykb")
theme_override_font_sizes/font_size = 75
theme_override_styles/normal = SubResource("StyleBoxFlat_x6o1d")
theme_override_styles/hover = SubResource("StyleBoxFlat_tq78x")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ng1xh")
text = "Options"

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="ExitButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("1_5nykb")
theme_override_font_sizes/font_size = 75
theme_override_styles/normal = SubResource("StyleBoxFlat_x6o1d")
theme_override_styles/hover = SubResource("StyleBoxFlat_tq78x")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ng1xh")
text = "Exit to Desktop"

[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/NewGameButton" to="." method="_on_new_game_button_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2/OptionsButton" to="." method="_on_options_button_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3/ExitButton" to="." method="_on_exit_button_button_up"]
